# metacollector

./: .gitignore  CMakeLists.txt  metacollector.kdev4
src/: format.h  lexer.h  lexerscanner.cc  main.cc  main.h  string.h
testcase/: CMakeLists.txt  testcase_main.cc  testcase_main.h
